# plumipy

./: .copier-answers.yml  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: .ci.yml
docs/: developer.md  index.md  quickstart.md
src/plumipy/: __init__.py  constants.py  core.py
tests/: test_core.py
tests/fixtures/: CONTCAR_ES  CONTCAR_GS  band.yaml
tests/test_core/: test_calculate_spectrum.yml
